--- a/public/500.html
+++ b/public/500.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <title>Copycopter</title>
-    <link href='/stylesheets/application.css' media='screen' rel='stylesheet' type='text/css' />
+    <link href='/assets/application.css' media='screen' rel='stylesheet' type='text/css' />
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   </head>
 
@@ -45,4 +45,3 @@
     <div id='clouds'></div>
   </body>
 </html>
-
